# Training-2024-25

./: Factorial_of_number.js  LICENSE  Maximum_of _3_numbers.js  Maximum_of_x_and_y.js  Print_1_to_N.js  README.md  Series_5.js  Sum_of_1_to_N.js
Advent Of Code/: README.md
Advent Of Code/Day1/: README.md
Advent Of Code/Day1/Part1/: get_puzzle.py  prog1.js  puzzles.txt
Advent Of Code/Day1/Part2/: prog1.js
Advent Of Code/Day2/: README.md
Advent Of Code/Day3/: README.md  part1.js  part2.js
Bootstrap/: README.md
Bootstrap/Task1/: README.md  index.html  styles.css
Gherkins with Nodejs/: README.md
Gherkins with Nodejs/login-app/: README.md  package-lock.json  package.json  playwright.config.js  server.js
HTML-CSS/: README.md
HTML-CSS/Task1/: README.md  index.html  styles.css
JavaScript/: README.md
JavaScript/Task1/: Array_manipulation.js  README.md
JavaScript/Task2/: README.md  Symbol_manipulation.js
JavaScript/Task3/: README.md  home.html  index.html
Programs of Flowcharts/: Area_of_circle.js  Perimeter_of_circle.js  README.md  Series_1.js  Series_2.js  Series_3.js  Series_4.js  Sine.js  Sum_of_1_to_N.js
Rust/: README.md
Rust/Axum/axum_task/: .env  Cargo.toml
Rust/Axum/axum_task/src/: main.rs
Rust/Axum/axum_task/src/database/: connection.rs
Rust/Axum/axum_task/src/middlewares/: auth.rs
Rust/Axum/axum_task/src/models/: user.rs
Rust/Axum/axum_task/src/router/: get_func.rs  login.rs  mod.rs  product.rs  registration.rs
Rust/Axum/axum_task/src/utils/: env.rs  jwt.rs  mod.rs
Rust/Rust Learning/: README.md
Rust/Tasks/: README.md
(+112 files in other folders)
