[package]
name = "axum_task"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
axum-extra = "0.10.0"
chrono = "0.4.39"
headers = "0.4.0"
rand = "0.9.0"
